[workspace]

members = [
    "auto-changed-nft",
    "nft",
    "composable-nft",
    "music-nft",
]

[package]
name = "nft-marketplace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
hashbrown = "0.13"
parity-scale-codec.workspace = true
scale-info.workspace = true
nft-marketplace-io = { path = "io" }
nft-io = { path = "nft/io" }
music-nft-io = { path = "music-nft/io" }
composable-nft-io = { path = "composable-nft/io" }
auto-changed-nft-io = { path = "auto-changed-nft/io" }
gcore.workspace = true


[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
gear-core.workspace = true
primitive-types.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
hex = "0.4.3"


[build-dependencies]
nft-marketplace-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = "1.1.0"
gear-wasm-builder = "1.1.0"
gmeta = "1.1.0"
gclient = "1.1.0"
gtest = { git = "https://github.com/gear-tech/gear", tag = "v1.1.0" }
gear-core = "1.1.0"
gcore = "1.1.0"
primitive-types = { version = "0.12", default-features = false }
nft-marketplace-io = { path = "io" }
nft-io = { path = "nft/io" }
composable-nft-io = { path = "composable-nft/io" }
music-nft-io = { path = "music-nft/io" }
auto-changed-nft-io = { path = "auto-changed-nft/io" }
tokio = "1"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
