[package]
name = "ai-nft-io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
scale-info.workspace = true
parity-scale-codec.workspace = true
gmeta = { workspace = true, features = ["codegen"] }
