[workspace]

members = ["client"]


[package]
name = "nft-showroom"
version = "0.1.0"
edition = "2024"

[dependencies]
nft-showroom-app = { path = "app" }

[build-dependencies]
nft-showroom-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
nft-showroom = { path = ".", features = ["wasm-binary"] }
nft-showroom-client = { path = "client" }
nft-client = { path = "../nft/client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }

[features]
wasm-binary = []
