[workspace]

members = ["client"]


[package]
name = "nft"
version = "0.1.0"
edition = "2024"

[dependencies]
nft-app = { path = "app" }

[build-dependencies]
nft-app = { path = "app" }
sails-rs = { version = "0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "0.8.1"

[dev-dependencies]
nft = { path = ".", features = ["wasm-binary"] }
nft-client = { path = "client" }
sails-rs = { version = "0.8.1", features = ["gtest"] }
gclient = "1.8.1"
tokio = { version = "1.41", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"

[features]
wasm-binary = []
