[package]
name = "nft-client"
version = "0.1.0"
edition = "2024"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.8.1"

[build-dependencies]
nft-app = { path = "../app" }
sails-client-gen = "0.8.1"
sails-idl-gen = "0.8.1"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
